# foxnio

./: .env.example  .gitignore  CHANGELOG.md  CI_FIX_REPORT.md  CI_QUICK_REF.md  CLAUDE.md  COVERAGE_BOOST_REPORT.md  INTEGRATION_AUDIT.md  Makefile  NEXT_ALIGNMENT_PLAN.md  OPTIMIZATION_REPORT_FINAL.md  OPTIMIZATION_SUMMARY.md  P0_IMPLEMENTATION_REPORT.md  README.md  REDIS_INTEGRATION_SUMMARY.md  ROLE_PERMISSION_REPORT.md  TEST_COVERAGE_PLAN.md  TODO.md  codecov.yml  config.example.yaml  config.yaml  deploy.sh  dev.sh  docker-compose.yml  fix_common_errors.sh  nginx.conf  optimize_and_deploy.sh  validate_model_sync.py
backend/: .dockerignore  .gitignore  CODE_NETWORK_LAYER_EXTRACTION.md  Cargo.toml  Dockerfile  MODEL_SYNC_IMPLEMENTATION.md  MODEL_SYNC_TASK_SUMMARY.md  PERFORMANCE_FIX_PLAN.md  PERFORMANCE_OPTIMIZATION_DONE.md  README.md  audit.toml  claude_shell_completion_report.md  claude_shell_usability_check.md
backend/docs/: DYNAMIC_MODEL_IMPLEMENTATION.md  jwt-refresh.md
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20240327_000001_create_users.rs  m20240327_000002_create_accounts.rs  m20240327_000003_create_api_keys.rs  m20240327_000004_create_usages.rs  m20240327_000005_create_password_reset_tokens.rs  m20240327_000005_create_refresh_tokens.rs  m20240327_000006_create_oauth_tokens.rs  m20240327_000007_create_audit_logs.rs  m20240327_000008_create_alert_rules.rs  m20240328_000011_create_groups.rs  m20240328_000012_create_model_configs.rs  m20240328_000014_create_announcements.rs  m20240328_000015_create_promo_codes.rs  m20240328_000016_create_user_attributes.rs  m20240328_000017_create_error_passthrough_rules.rs  m20240328_000018_create_scheduled_test_plans.rs  m20240328_000019_create_proxies.rs  m20240328_000020_create_redeem_codes.rs  m20240328_000021_create_quota_usage_history.rs  m20240328_000022_create_subscriptions.rs  m20240329_000023_add_supported_model_scopes.rs  m20240330_000026_create_webhook_endpoints.rs  m20240330_000027_create_webhook_deliveries.rs  m20240401_000028_add_performance_indexes.rs  m20240402_000029_add_scheduler_indexes.rs  m20240403_000030_create_redeem_code_ledger.rs  m20240405_000031_create_balance_ledger.rs  m20240416_000032_add_query_performance_indexes.rs  m20240417_000033_add_group_scheduling_policy.rs  m20240418_000034_add_cache_pricing.rs  m20240419_000035_create_payment_orders.rs
backend/src/: lib.rs  main.rs  openapi.rs  response.rs  state.rs
backend/src/alert/: manager.rs  mod.rs  rules.rs
backend/src/cache/: mod.rs
backend/src/config/: mod.rs  test.rs
backend/src/db/: mod.rs  pool.rs  redis.rs
backend/src/entity/: account_credentials.rs  accounts.rs  api_keys.rs  audit_logs.rs  balance_ledger.rs  encrypted_field.rs  error_passthrough_rules.rs  groups.rs  mod.rs  model_configs.rs  oauth_tokens.rs  password_reset_tokens.rs  payment_orders.rs  proxies.rs  redeem_code_ledger.rs  refresh_tokens.rs  subscriptions.rs  test.rs  usages.rs  users.rs  webhook_deliveries.rs  webhook_endpoints.rs
backend/src/gateway/: failover.rs  failover_test.rs  handler.rs  middleware.rs  mod.rs  proxy.rs  responses.rs  responses_converter.rs  responses_handler.rs  routes.rs  stream.rs  test.rs  waiting_queue.rs
backend/src/handler/: admin.rs  admin_accounts.rs  admin_groups.rs  announcement.rs  audit.rs  auth.rs  backup.rs  batch.rs  dashboard.rs  error_passthrough_rule.rs  groups.rs  health.rs  mod.rs  models.rs  payment.rs  promo_code.rs  proxy.rs  quota.rs  redeem.rs  scheduled_test_plan.rs  subscription.rs  user.rs  user_announcement.rs  user_attribute.rs  user_groups.rs  verify.rs  webhook.rs
backend/src/health/: mod.rs
backend/src/metrics/: business.rs  mod.rs  prometheus.rs
backend/src/middleware/: api_key_auth.rs  auth.rs  mod.rs
backend/src/model/: account.rs  api_key.rs  mod.rs  ops_error.rs  usage.rs  user.rs
backend/src/service/: account.rs  account_credentials_persistence.rs  account_expiry_service.rs  account_group.rs  account_quota_reset.rs  account_rpm.rs  account_service.rs  account_test_service.rs  account_usage_service.rs  admin_service.rs  announcement.rs  announcement_service.rs  announcement_test.rs  anthropic_messages_forwarder.rs  anthropic_session.rs  antigravity_credits_overages.rs  antigravity_gateway_service.rs  antigravity_privacy_service.rs  antigravity_quota_fetcher.rs  antigravity_subscription_service.rs  antigravity_token_provider.rs  antigravity_token_refresher.rs  api_key.rs  api_key_auth_cache.rs  api_key_quota_reset.rs  api_key_service.rs  api_key_test.rs  audit.rs  auth_service.rs  backup.rs  backup_service.rs  balance_ledger.rs  batch.rs  batch_import.rs  (+173 more)
backend/tests/: API_KEY_PERMISSION_TEST_SUMMARY.md  COMPLETION_REPORT.md  alert_test.rs  announcement_test.rs  api_key_permission_test.rs  api_test.rs  audit_test.rs  batch_operations_test.rs  benchmark_test.rs  claude_shell_test.rs  concurrency_test.rs  database_test.rs  e2e_test.rs  encryption_test.rs  error_passthrough_test.rs  failover_test.rs  full_e2e_test.rs  health_test.rs  http2_benchmark_test.rs  integration_test.rs  jwt_refresh_test.rs  load_test.rs  metrics_test.rs  password_reset_test.rs  pricing_test.rs  promo_code_test.rs  redis_test.rs  scheduled_test_test.rs  scheduler_test.rs  user_attribute_test.rs  webhook_integration_test.rs
(+175 files in other folders)
