[package]
name = "foxnio"
version = "0.1.0"
edition = "2021"
authors = ["FoxNIO Team"]
description = "AI API Gateway - Subscription quota distribution management"
license = "MIT"
rust-version = "1.75"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "ws"] }
axum-extra = { version = "0.9", features = ["typed-header", "cookie"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }
hyper = { version = "1.2", features = ["full"] }
tokio = { version = "1.36", features = ["full"] }

# Database
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
sea-orm-migration = "0.12"

# Redis
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Authentication
jsonwebtoken = "9.2"
argon2 = "0.5"
password-hash = "0.5"
rand = "0.8"

# HTTP Client
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"], default-features = false }

# Async & Concurrency
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Utils
uuid = { version = "1.7", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.19"
regex = "1.10"
base64 = "0.22"
hex = "0.4"
sha2 = "0.10"
hmac = "0.2"

# Configuration
dotenvy = "0.15"

[dev-dependencies]
tokio-test = "0.4"

[dependencies.foxnio-migration]
path = "migration"

[[bin]]
name = "foxnio"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

[profile.dev]
opt-level = 0
debug = true
