[package]
name = "foxnio"
version = "0.2.1"
edition = "2021"
authors = ["FoxNIO Team"]
description = "AI API Gateway - Subscription quota distribution management"
license = "MIT"
rust-version = "1.91"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "ws", "multipart"] }
axum-extra = { version = "0.9", features = ["typed-header", "cookie"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }
hyper = { version = "1.2", features = ["full", "http2"] }
hyper-util = { version = "0.1", features = ["full", "http2"] }
tokio = { version = "1.36", features = ["full"] }

# HTTP/2 & TLS support
tokio-rustls = "0.26"
rustls-pemfile = "2.0"
rustls = "0.23"
http = "1.0"

# Database
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
sea-orm-migration = "0.12"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid", "macros"] }

# Redis
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
lru = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
bincode = "1.3"

# Authentication
jsonwebtoken = "9.2"
argon2 = "0.5"
password-hash = "0.5"
rand = "0.8"

# HTTP Client
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "http2"], default-features = false }

# Async & Concurrency
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"
futures-util = "0.3"

# WebSocket
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
tungstenite = "0.21"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Utils
uuid = { version = "1.7", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.19"
regex = "1.10"
base64 = "0.22"
hex = "0.4"
sha2 = "0.10"
hmac = "0.12"

# Email
lettre = { version = "0.11", features = ["tokio1-native-tls"] }

# Encryption
aes-gcm = "0.10"
zeroize = { version = "1.7", features = ["derive"] }
urlencoding = "2.1"
typenum = "1.17"

# TOTP Two-Factor Authentication
totp-lite = "2.0"
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
url = "2.5"

# Compression
flate2 = "1.0"
brotli = "3.3"
bytes = "1.5"
pin-project-lite = "0.2"

# Configuration
dotenvy = "0.15"

# CSV parsing
csv = "1.3"

# OpenAPI / Swagger
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }

# System (for health checks)
nix = { version = "0.27", features = ["fs"] }

# Metrics
prometheus = "0.13"
lazy_static = "1.4"

[dev-dependencies]
tokio-test = "0.4"

[dependencies.foxnio-migration]
path = "migration"

[[bin]]
name = "foxnio"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

[profile.dev]
opt-level = 0
debug = true
